--- a/static/css/stratagem_style.css
+++ b/static/css/stratagem_style.css
@@ -8,8 +8,8 @@ body {
     .arrow { display: none;
     } 
     .stratagem_icon{
-        height: 40px;
-        width: 40px;
+        height: 50px;
+        width: 50px;
         margin-right: 5px;
         border-radius: 10%;
     }
@@ -98,19 +98,20 @@ title{
 }
 .stratagem_cards {
     position: absolute;
-    width: 100%;
-    max-height: 80vh;
-    overflow-y: auto;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 80vh;
+    width: 100vw;
+    overflow-x: auto;
 }
 .stratagem_card{
     width: calc(100% - 20px);
     padding: 5px;
     display: flex;
+    justify-content: center;
     align-items: center;
+    align-content: center;
 }
 .stratagem_card_title {
     max-width: calc(100vw);
