--- a/templates/fun/Salvations_Edge_4.html
+++ b/templates/fun/Salvations_Edge_4.html
@@ -33,6 +33,7 @@
             <div class="content">
                 <h1 class="main_title" id="main_title1">자신의 조를 선택하세요.</h1>
                 <h1 class="main_title" id="main_title2"></h1>
+                <div class="description">잭팟 : 벽의 문양 두개가 동일 할 경우</div>
                 <div class="select_team">
                     <h2 class="main_text" id="team_out">외부조</h2>
                     <h2 class="main_text" id="team_in">내부조</h2>
