--- a/templates/fun/Salvations_Edge_4.html
+++ b/templates/fun/Salvations_Edge_4.html
@@ -9,12 +9,12 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Salvations Edge 4 Description">
+        <meta name="description" content="구원의 경계 4네임드 계산기">
         <meta name="author" content="Hanbyel">
         <meta name="generator" content="Django">
         <meta name="robots" content="noindex">
-        <meta property="og:title" content="Salvations Edge 4">
-        <meta property="og:description" content="Salvations Edge 4 Description">
+        <meta property="og:title" content="구원의 경계 4네임드 계산기">
+        <meta property="og:description" content="능지박살 아이익 전용">
         <meta property="og:image" content="https://github.com/Adihang/portfolio_with_django/assets/56463432/4e97299e-482e-42a8-8527-7d3173077ada">
         <link rel="icon" href="{% static 'favicon.png' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
@@ -27,7 +27,7 @@
     <body>
         <div class="Salvations_Edge_4">
             <div class="title">
-                <h3 class="title_text">능지박살 아이익들을 위한 싱글벙글 구원의 경계 4네임드 계산기</h3>
+                <h3 class="title_text">능지박살 아이익들을 위한 구원의 경계 4네임드 계산기</h3>
             </div>
             <hr>
             <div class="content">
