--- a/static/css/salvations_edge_style.css
+++ b/static/css/salvations_edge_style.css
@@ -12,10 +12,10 @@ ul{
     }
 .title{
     display: flex;
-    margin: 10px;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    align-content: center;;
+    align-content: center;
 }
 .title_text{
     padding-top: 10px;
@@ -26,7 +26,7 @@ ul{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 85vh;
+    height: 70vh;
     position: relative;
     color: white;
     text-align: center;
@@ -66,4 +66,8 @@ hr{
 }
 .description{
     display: none;
+}
+.title_img{
+    width: 100%; /* 이미지 너비를 페이지의 너비에 맞춤 */
+    height: auto; /* 이미지 비율을 유지하여 높이를 자동 조절 */
 }
