--- a/templates/fun/Salvations_Edge_4.html
+++ b/templates/fun/Salvations_Edge_4.html
@@ -27,9 +27,10 @@
     <body>
         <div class="Salvations_Edge_4">
             <div class="title">
-                <h3 class="title_text">능지박살 아이익들을 위한 구원의 경계 4네임드 계산기</h3>
+                <img src="/media/Salvations_Edge_4_title_img.png" alt="title_img" class="title_img">
+                <h3 class="title_text">능지박살 아이익들을 위한 구경 4네임드 계산기</h3>
             </div>
-            <hr>
+            
             <div class="content">
                 <h1 class="main_title" id="main_title1">자신의 조를 선택하세요.</h1>
                 <h1 class="main_title" id="main_title2"></h1>
@@ -54,7 +55,7 @@
                 </div>
             </div>
             <hr>
+            <div class="lowtext" >made by Adihang</div>
         </div>
-        <div class="lowtext" >made by Adihang</div>
     </body>
 </html>
