--- a/templates/none.html
+++ b/templates/none.html
@@ -19,6 +19,7 @@
     <link rel="icon" href="{% static 'favicon.png' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/salvations_edge_style.css' %}">
     <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
     <title>
@@ -26,6 +27,5 @@
 </head>
 <body>
     <h1>공사중</h1>
-    <h2>action test</h2>
 </body>
 </html>
