--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,6 +74,7 @@ body {
         padding-left: 10px;
         padding-right: 10px;
         overflow: hidden;
+        background-color: white;
     }
     .main_text {
         flex: 1; /* 남은 공간을 모두 차지하도록 설정하여 오른쪽 정렬됨 */
