--- a/static/css/style.css
+++ b/static/css/style.css
@@ -107,9 +107,10 @@ input[type=submit] {
     margin-top:10px;
 }
 .project_detail{
-    margin-top: 30;
+    margin-top: 30px;
 }
 .project_detail_title {
+    margin-top: 30px;
     text-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
